Fix High-Quality filtering on AMD GPU

Its Linux driver supports openGL 3.0 only

BUG:373490